<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="create">Create</string>
    <string name="notification">Notifs</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="loading">Loading</string>
    <string name="template_welcome">Welcome %1$s</string>
    <string name="edit_information">Edit Information</string>
    <string name="logout">Logout</string>
    <string name="about_body">Hey, I’m Renz Carlo Salanga, your friendly neighborhood fullstack developer. I built this app to prove that Kotlin Multiplatform is so awesome, even Chuck Norris would switch from roundhouse kicks to coding. 😄</string>
    <string name="about_title">About this app</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="do_you_really_want_to_logout">Do you really want to logout?</string>
    <string name="cancel">Cancel</string>
</resources>